feat: Add endpoint for many quests request
